# munichpavel.github.io

./: .gitignore  CNAME  README.md  _config.yml  index.md  posts.md  privacy-terms.html  privacy.html  pyproject.toml
_data/: navigation.yml  projects.yml
_includes/: cta.html  projects.html  thoughts.html
_layouts/: home.html
_pages/: projects.md
_posts/: 2019-11-22-tum-hackathon.md  2019-12-03-tabloid-emerge.md  2020-02-20-risk-ai-workshop.md  2020-04-17-fake-data-on-pypi.md  2020-05-02-hackysacks-against-supervised-learning.md  2020-06-16-expat-fatcat.md  2020-06-16-mindful-burrito.md  2020-09-03-ai-revolution-or-not.md  2020-17-04-fake-data-on-pypi.md  2022-03-08-ai-revolution-or-not.md  2022-04-14-risk-ai-workshop.md  2022-04-16-risk-ai-workshop.md  2022-04-19-risk-ai-workshop.md  2022-06-10-expat-factcat-towards-diy-datamesh.md  2022-06-xx-towards-data-mesh.md  2023-02-10-data-contracts.md  2023-03-08-data-contracts.md  2023-06-09-llm-ops-configuration-explosion.md  2023-06-21-llm-ops-configuration-explosion.md  2024-02-15-constant-of-coffee.md  2024-02-16-data-engineering-for-genai.md  2025-01-21-leading-data-ai-teams-genai.md  2025-02-03-leading-data-ai-teams-genai.md  2025-02-12-ai-cyber-risk-zoo.md  2025-02-18-ai-failure-modes-training.md  2025-07-18-hwr-lecture-ai-for-security-securing-ai.md  2025-08-06-proving-nostradamus-genai-wrong.md  2025-08-07-a-prompt-is-just-a-suggestion.md  2025-08-19-dont-let-cyberrisk-kill-genai-vibe.md  2025-08-20-furniture-table-classes.md  2025-10-16-slovenian-banking-risk-conference.md  2025-11-07-recall-chatgpt.md  (+3 more)
(+301 files in other folders)
